--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
     implementation 'com.android.support:support-compat:27.1.0'
+    implementation 'com.jakewharton.timber:timber:4.6.1'
 }
