--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,7 @@ dependencies {
     implementation 'com.android.support:support-compat:27.1.0'
     implementation 'com.jakewharton.timber:timber:4.6.1'
     implementation 'com.google.android.gms:play-services-maps:11.8.0'
+
+    implementation 'com.trello:rxlifecycle:0.4.0'
+    implementation 'com.trello:rxlifecycle-components:0.4.0'
 }
