--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,13 @@ dependencies {
 
     implementation 'com.trello:rxlifecycle:0.4.0'
     implementation 'com.trello:rxlifecycle-components:0.4.0'
+
+    // RxJava 2
+    implementation "io.reactivex.rxjava2:rxjava:2.1.12"
+
+    // RxAndroid
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+
+    //RecyclerView
+    implementation 'com.android.support:recyclerview-v7:27.1.0'
 }
