--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,22 +22,22 @@ android {
     }
 }
 
-
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.1.0'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:support-compat:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    implementation 'com.android.support:cardview-v7:27.1.0'
+    implementation 'com.android.support:cardview-v7:27.1.1'
 
-    compile 'com.jakewharton:butterknife:8.8.1'
+    implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
-    implementation 'com.android.support:support-compat:27.1.0'
-    implementation 'com.jakewharton.timber:timber:4.6.1'
-    implementation 'com.google.android.gms:play-services-maps:11.8.0'
+    implementation 'com.jakewharton.timber:timber:4.7.0'
+    implementation 'com.google.android.gms:play-services-maps:12.0.1'
+
 
     implementation 'com.trello:rxlifecycle:0.4.0'
     implementation 'com.trello:rxlifecycle-components:0.4.0'
@@ -49,5 +49,15 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
 
     //RecyclerView
-    implementation 'com.android.support:recyclerview-v7:27.1.0'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+
+    //Gson
+    implementation 'com.google.code.gson:gson:2.8.2'
+
+    //RetroFit
+
+    compile 'com.squareup.retrofit2:retrofit:2.4.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.4.0'
+
+
 }
