--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,5 +62,8 @@ dependencies {
     //RX java retrofit Adapter
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
 
+    //Glide image library
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
 
 }
