--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,6 +72,7 @@
         <activity android:name=".RecyclerView.MyRecyclerViewActivity" />
         <activity android:name=".SpaceX.SpaceXActivity" />
         <activity android:name=".retrofit.RocketActivity" />
+        <activity android:name=".retrofit.RocketStartsActivity" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
