--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+        >
         <activity android:name=".simpleworks.MainActivity" />
         <activity android:name=".fragment.SecondActivity" />
         <activity android:name=".simpleworks.CameraActivity" />
@@ -71,10 +72,13 @@
         <activity android:name=".JobScheduler.ScheduleJobActivity" />
         <activity android:name=".RecyclerView.MyRecyclerViewActivity" />
         <activity android:name=".SpaceX.SpaceXActivity" />
-        <activity android:name=".retrofit.RocketActivity" />
+        <activity android:name=".retrofit.RocketActivity"
+            android:parentActivityName=".StartActivity"
+            />
         <activity android:name=".retrofit.RocketStartsActivity" />
         <activity android:name=".simpleworks.InputLayoutActivity" />
         <activity android:name=".simplecasemvp.SimpleCaseMvpActivity" />
+        <activity android:name=".simpleworks.PagesActivity" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -97,6 +101,16 @@
                 <action android:name="android.intent.action.SCREEN_ON" />
             </intent-filter>
         </receiver>
+
+        <receiver
+            android:name="fragments.AirplaneModeChangeReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.AIRPLANE_MODE" />
+                <action android:name="android.intent.action.SCREEN_ON" />
+            </intent-filter>
+        </receiver>
+
         <receiver
             android:name=".broadcast.MyBroadcastAppReceiver"
             android:exported="true">
@@ -104,6 +118,7 @@
                 <action android:name="SENDING" />
             </intent-filter>
         </receiver>
+
         <receiver
             android:name=".broadcast.MyBroadcastReceiverOnBoot"
             android:exported="true">
@@ -111,6 +126,7 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
+
         <receiver
             android:name=".broadcast.MyBroadcastReceiverAfterTime"
             android:exported="true">
@@ -119,6 +135,7 @@
             </intent-filter>
         </receiver>
 
+
         <activity android:name=".StartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -126,11 +143,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".simpleworks.MapsActivity"
             android:label="@string/title_activity_maps">
         </activity>
-        <activity android:name=".simplecasemvp.SimpleCaseMvpActivity" />
 
     </application>
 
