--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -80,6 +80,7 @@
         <activity android:name=".simplecasemvp.SimpleCaseMvpActivity" />
         <activity android:name=".simpleworks.PagesActivity" />
         <activity android:name=".navigationdrawer.DrawerActivity" />
+        <activity android:name="database.DatabaseActivity" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
