--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -81,6 +81,7 @@
         <activity android:name=".simpleworks.PagesActivity" />
         <activity android:name=".navigationdrawer.DrawerActivity" />
         <activity android:name="database.DatabaseActivity" />
+        <activity android:name=".sharedpreferences.SharedPreferencesActivity" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
