DataBase - Room DataBase in StudentsDataDao v1

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -82,6 +82,7 @@
         <activity android:name=".navigationdrawer.DrawerActivity" />
         <activity android:name="database.DatabaseActivity" />
         <activity android:name=".sharedpreferences.SharedPreferencesActivity" />
+        <activity android:name=".room.RoomDataBaseActivity" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
