--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -83,6 +83,7 @@
         <activity android:name="database.DatabaseActivity" />
         <activity android:name=".sharedpreferences.SharedPreferencesActivity" />
         <activity android:name=".room.RoomDataBaseActivity" />
+        <activity android:name=".room.StudentDataBaseActivity" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
