--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 27
@@ -72,4 +73,11 @@ dependencies {
     // Room
     implementation "android.arch.persistence.room:runtime:1.1.0-beta3"
     annotationProcessor "android.arch.persistence.room:compiler:1.1.0-beta3"
+
+    // Dagger
+    implementation 'com.google.dagger:dagger-android:2.16'
+    implementation 'com.google.dagger:dagger-android-support:2.16' // if you use the support libraries
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.16'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.16'
+
 }
